--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "projectpage",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "vite build",
+    "build": "npm-run-all build:*",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite",
-    "build": "npm-run-all build:*",
     "build:dev": "vite build",
     "build:prod": "npm start"
   },
@@ -28,6 +26,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "npm-run-all": "^4.1.5",
     "vite": "^4.5.2"
   }
 }
