--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm-run-all build:*",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "build:dev": "vite build",
+    "build:dev": "vite build"
     },
   "dependencies": {
     "bootstrap": "^5.3.3",
